--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "Xuewen Pan's Blog - powered by Jekyll & GitPages."
+title: "NetCafe - powered by Jekyll & GitPages."
 ---
 <h1 class="page-header">
   <small>
-    Android, Cocos2d, Java, Linux, reading...
+    Enjoy the world:)
   </small>
 </h1>
 {% include recommend.html %} 
