--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ title: "not found page!"
 ---
 
 <p align="center">
-<h1></h1>NOT FOUND PAGE!</h1>
+<h1></h1>We are lost in the world?!</h1>
 
 <br/>
 <br/>
-thanks!
+Thanks!
 </p>
