--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ title: "not found page!"
 ---
 
 <p align="center">
-<h1></h1>We are lost in the world?!</h1>
+<h1></h1>Are We Lost ?!</h1>
 
 <br/>
 <br/>
