--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "NetCafe - powered by Jekyll & GitPages."
 ---
 <h1 class="page-header">
   <small>
-    Enjoy the world:)
+    生命就应该浪费在美好的事物上.
   </small>
 </h1>
 {% include recommend.html %} 
