--- a/_posts/2014-05-27-国际流行的十大健康生活方式.html
+++ b/_posts/2014-05-27-国际流行的十大健康生活方式.html
@@ -1,93 +1,14 @@
----
-layout: post
-published: true
-title: 国际流行的十大健康生活方式
-tags: 生活||Life    
-permalink: /2014-05-27-国际流行的十大健康生活方式.html
----
- <a href="https://lh5.googleusercontent.com/-C2XHnTHVxnQ/U4Pud4f1KDI/AAAAAAAAEVQ/yuTt4tG620o/s1600/5c87305c4e3fe33fee742cac404485ed-790391.jpeg"><img alt="" border="0" id="BLOGGER_PHOTO_ID_6017915724246624306" src="https://lh5.googleusercontent.com/-C2XHnTHVxnQ/U4Pud4f1KDI/AAAAAAAAEVQ/yuTt4tG620o/s320/5c87305c4e3fe33fee742cac404485ed-790391.jpeg" /></a></span></div></div><br />
- 一、少食肉
+<p>随着技术的进步和宽带的普及，电视正在成为继计算机、手机之后的第三种信息访问终端，电视演变成“电脑”，只不过更多的承载着用户对娱乐方面的诉求。用户可以通过两种方式实现电视智能化，直接购买智能电视或者购买搭载安卓系统的智能电视盒，从而实现上网、聊天、视频、电影、游戏等功能，高清、网络、智能化的电视成为更多用户的选择。 在智能电视机的选择上，推荐优先考虑搭载安卓系统的智能电视，从而在应用程序上可以有更多的选择。如某品牌的某型号智能电视号称安装自主研发系统，但应用程序却少的可怜，且无法兼容安卓程序，智能二字形同虚设。还有一种情况的智能电视，支持u盘，配有安卓系统但只能从指定应用商店下载推荐的安卓程序，破解方法如下，可以先从应用商店下载任意程序A后不要安装，将U盘连接到电脑，用网上下载的智能电视第三方应用程序替换掉程序A（注意保持A文件名不变，否则在电视上无法识别），将u盘接入电视，在程序管理中安装该款程序，掉包成功后即可使用第三方应用市场下载喜欢的程序了。</p>
 
-俄罗斯眼下流行素食风。他们认为大量食用各类肉及其制品，会加重某些疾病或诱发某些疾病。正常情况下人的体液包括血液、细胞内、外液等都是弱碱性，血液的PH值为7.35~7.45。
+<p>推荐几个不错的智能电视第三方应用市场：  <br>
+奇珀市场 <a href="http://down.7po.com/">http://down.7po.com/</a>  <br>
+当贝市场 <a href="http://www.dangbei.com/">http://www.dangbei.com/</a>  <br>
+UC浏览器TV版 <a href="http://tvb.uc.cn/">http://tvb.uc.cn/</a> </p>
 
-人体内的PH值与我们进食的食物有密切的关系，如果摄入酸性食物过多，大大超过体内调整的PH系统的限度，那就会使体内PH值失衡，进而引起酸碱平衡破坏。
+<p>当然，你也可以选择ES文件浏览器来管理和安装电视上所需的安卓应用程序。如果你有不错的电视应用市场或者智能电视应用，也记得分享一下哦，Have fun:) </p>
 
-所以食物的酸性、碱性搭配对人体健康十分重要。经常过食酸性食物，会使人体由于消化器官的兴奋而使乳酸增高，还会增加体内钙、镁等矿物质的消耗，造成这些营养成分不足。
-
-经常吃大鱼大肉，会使体内的酸性物质积聚，血液就会偏酸性，人体的内环境就开始恶化，出现不健康的"酸性体质"，引起头晕、焦躁、便秘、失眠、疲劳、抵抗力下降，易患上呼吸道感染等症状。由于血液的粘度增加了，还可致动脉硬化。
-
-   <br />二、晒太阳
-
-美国纽约州的居民推崇有空即晒太阳的生活方式，多晒晒太阳对身体非常有好处，因为阳光本身就含有一种很营养的成分，也就是维生素C和维生素D。但是晒太阳之前，切忌一定要先涂好防晒霜，以免被晒伤。
-
-冬天晒太阳还是有必要的，它可以更新身体内的坏死部分，晒太阳的最佳黄金时间是早晨十点钟和下午四点钟，这两个时间段接触的阳光紫外线没有中午的强，所以千万不要选择在中午晒太阳。
-
-春天和秋天也是晒太阳的最佳时期，夏天的话，能避免少晒太阳就少晒太阳吧，夏天是四季中阳光最毒辣的时候，也就是紫外线最强的时期。
-
-   <br />三、雨中行
-
-冒着霏霏细雨逛街或散步是现代欧美人的一种时髦。雨中散步有许多晴日散步所不可比拟的健身作用。一场毛毛细雨降落大地，可洗涤尘埃污物，净化空气，使树木更青、花草更鲜、路面更洁净、空气更清新。
-
-此外，雨前残阳照射及细雨初降时所产生的大量离子，享有"空气维生素"的美称，令人安神逸志，心情舒畅，并有助于消除阴雨天气容易引起的人体情绪郁闷症。
-
-有的人在气温较高、比较暖和的天气冒雨散步，更有一番情趣，霏霏细雨柔如一种天然的冷水浴，对颜面、头皮、肌肤进行按摩，令人神清气爽，耳目一新，疲劳顿消，愁烦俱除。
-
-尽情地享受生命在雨露中运动的欢乐，不但会大大增加机体对外界环境变化的适应能力，且能促进工作活力、提高工作效率。
-
-   <br />四、常唱歌
-
-美国马里兰大学的专家倡导经常唱歌，唱歌不仅是释放压力、缓解心情的有效方法，还能够起到预防治疗疾病的作用。放声歌唱不但可以增加面部肌肉运动，改善颈部、面部血液循环，还能增加人体的肺活量，减慢心肺功能衰退，被誉为"增氧健身法"。
-
-国外科学家曾将20名老歌手与不经常唱歌的同龄人进行对比，发现歌手的胸壁肌发达、心肺功能好，而且心率缓慢。唱歌的好处不亚于跑步、游泳、划船等，许多职业歌手的寿命比普通人长10余年。唱歌还能使人的血液成分发生变化，有助于提高人体免疫力。
-
-唱歌虽然对身体有诸多好处，但也并非多多益善。如果持续唱歌时间过久，容易伤及声带，引起咽喉疼痛、声音嘶哑等不适。最好的唱歌方式是，唱15分钟，休息10分钟，再唱15分钟，休息10分钟，如此循环，每天唱歌总时间最好别超过两小时。
-
-   <br />五、饭后息
-
-在日本、韩国"饭后稍休息，再去百步走"已成为一种健康养生的大众之举。
-
-如果饭后立即从事剧烈的运动或紧张的脑力劳动，就要从消化器官抽调一部分血液支援身体，造成消化器官的血液不足，从而影响消化。同时，肌肉活动时，交感神经兴奋，能抑制消化器官的活动，也同样会影响消化。
-
-经常这样做，甚至会引起肠胃病及消化不良等疾病。如果饭后稍事休息，这时由于脑子里管运动的中枢装入抑制状态，于是就给管理内脏机能的中枢创造了有利的工作条件，消化工作就可以进行得很顺利。
-
-在饭后散散步，参加一些不太紧张的文体活动，对健康也是有利的。
-
-   <br />六、挺起胸
-
-美国密苏里州大学的专家认为，抬头挺胸，不仅令人有气质、看上去年轻而精力充沛，而且抬头有助减轻腰骨疼，挺胸会减少脊椎的负荷。
-
-当人抬头挺直胸时，胸膛会随之挺起，肺活量可增加20%~50%。空气吸入得多，身体组织所获得的氧气量也随之增多。当一个人获得较多氧气供应时，身体就不易疲倦。同时，因为挺胸的姿势会减少脊椎的弧度，所以，抬头还能减轻腰骨病。
-
-   <br />七、静坐思
-
-忙中偷闲，静下心来，每日静坐冥思1～2次，每次30分钟左右，排除杂念，放松身心，有助解除神经头痛、降血压。美国得克萨斯州的居民流行这样的健康风。静坐对治疗或辅助料种种慢性病，亦均有显著作用。
-
-如腰腿疼痛、肩周血脉炎、慢性肾炎、慢性肝炎、妻管严、肠炎、关节炎及冠心病、高血压、动脉硬化、美尼尔氏综合症等，都有显效。人们如能经常静坐，就会心情平静，血脉畅通，疾病也就不易发生了。
-
-相反，若经常受愤怒、恐惧、悲伤、情欲所干扰，心烦气躁，则必致气血失调，久而百病丛生。如年事已高的人，或体弱多病，冬天觉手脚冰冷，则静坐之后便会觉得手足发热，可见静坐能使血气畅通，无所不至。夏天气候炎热的时候，静坐又能使身体清凉。
-
-所谓"熄灭心头火，除热得清凉"，静坐不唯能御寒消暑，更能使肥胖者减肥变瘦，瘦者增肥，因为肥瘦皆是病态，怯病则适中矣。&nbsp;
-
-   <br />八、天伦乐
-
-业余时光，共享天伦之乐，已在日本、东南亚地区一些国家颇为流行。我们每天的生活面临太多压力，这种压力需要及时调解。
-
-"家"就是一个很好的解压场所。不论白天的工作多么的烦躁，回家后都要积极调整好自己的情绪，并与亲人们做一些"互动"，可以和孩子一起玩游戏，可以和爱人一起做一份丰盛的晚餐，可以和父母共同欣赏一部电影或是看一本书。坚持下来，你会发现自己的心态好了不少，自然有利于健康。
-
-   <br />九、步当车
-
-以步当车在欧美国家已日渐盛行。步行拥有许多优点：自然轻松，不用学习，不需任何奇才，免费，而且随时随地都可进行。在户外轻松步行更为可取，运动时的步行注重的是充满活力的步子，和适度摆动手臂。
-
-像所有具有持久性的身体运动一样，步行能促使器官燃烧卡路里，把碳水化合物、脂肪和蛋白质转化为能量，减少脂肪的储存。如果你常常走路，你的体重就会下降，身体的曲线也会慢慢改善。
-
-步行能有效保持骨密度和优质骨骼。与跑步不同，步行是温和的，关节不会感到疼痛和不适。肌肉的压力促使骨骼生成和更新骨组织作为应对。步行还能增加身体柔韧度和平衡力，这两项能力往往随年龄的增大而退化。
-
-已经证实，心情抑郁的人和备受压力折磨的人每周步行3/4次，每次30分钟，能有效改善情绪，提升自信心。一次充满活力的步行能激发快乐荷尔蒙—内太啡的分泌。这种天然减压既能减轻身体病症，如失眠、日间疲倦、善饥症和食欲不振。
-
-   <br />十、行善事
-
-不以善小而不为，不与恶小而为之！这是句千古流传的名句。
-
-首先，做好事的人会受到人们的推崇与尊敬。不论大善还是小善，都会得到不同的回报。行善时，受益者也会对你感激不尽，善事也得到了良性循环，在我们的生活中相互传递，对后代起到了实际的教导作用。
-
-其次，作好事的人会获得一种难以名状的心理满足，这有助强化人的免疫系统，调节身心"合二为一"，有利健康长寿。
+<blockquote>
+  <p>温馨提示： <br>
+  1.畅享智能电视需使用4M以上网络带宽  <br>
+  2.安装智能电视程序请选用TV版</p>
+</blockquote>
