--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "NetCafe - powered by Jekyll & GitPages."
+title: "NetCafe - Enjoy the world."
 ---
 <h1 class="page-header">
   <small>
