--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ title: "not found page!"
 ---
 
 <p align="center">
-<h1></h1>Are We Lost ?!</h1>
+<h1></h1>Sorry Dude, We are Lost!</h1>
 
 <br/>
 <br/>
-Thanks!
+
 </p>
