--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: "NetCafe - Enjoy the world."
     生命就应该浪费在美好的事物上.
   </small>
 </h1>
-{% include recommend.html %} 
+<!-- {% include recommend.html %} -->
 
 <!-- Loop output paged posts -->
 {% for post in paginator.posts %}
