--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: "NetCafe - Enjoy the world."
 </h2>
 <hr>
 {{ post.excerpt }}
-	<p> <a href="{{ post.url }}"><span >阅读全文 &raquo; </span></a></p>
+	<p> <a href="{{ post.url }}"><span >Read More &raquo; </span></a></p>
 <hr>
 {% endfor %}
 
